# DeaderZone-Rogue

./: .gitignore  .gitmodules  build.ps1
docs/: design.md
mod/: CMakeLists.txt  download_icons.ps1
mod/resources/: icons.rc
mod/src/: damage_hook.cpp  damage_hook.h  damage_tracker.cpp  damage_tracker.h  dllmain.cpp  dwmapi_proxy.def  hooks.cpp  hooks.h  stats_overlay.cpp  stats_overlay.h  ue_engine.cpp  ue_engine.h  ue_types.h  version_proxy.def
research/: level_reward_structure.md  reward_system.md
tools/: dzr_catalog.txt  install_ue4ss.bat  restore_mod.bat
